--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,10 @@
         <activity android:name=".ProfileActivity"></activity>
         <activity android:name=".NutritionActivity" />
         <activity android:name=".FitnessActivity" />
+        <activity android:name=".FitnessActivity2"/>
         <activity android:name=".SettingsActivity" />
+        <activity android:name=".ExerciseActivity"/>
+        <activity android:name=".ExerciseActivity2"/>
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,15 +23,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login" />
         <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
     </application>
 
