--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,10 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
-            android:theme="@style/Theme.AppCompat.NoActionBar"
-            >
-        </activity>
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".ExerciseActivity2"/>
+        <activity android:name=".ExerciseActivity"/>
+        <activity android:name=".FitnessActivity2"/>
     </application>
 
 </manifest>
